RESOLVED FIXED190168
[WebVTT] Cue with line setting is not rendered correctly
https://bugs.webkit.org/show_bug.cgi?id=190168
Summary [WebVTT] Cue with line setting is not rendered correctly
Per Arne Vollan
Reported 2018-10-01 15:03:13 PDT
When the line setting contains an optional alignment value, the cue is not rendered at the correct position, see https://w3c.github.io/webvtt/#webvtt-line-cue-setting.
Attachments
Patch (8.35 KB, patch)
2018-10-01 15:14 PDT, Per Arne Vollan
eric.carlson: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews105 for mac-sierra-wk2 (3.06 MB, application/zip)
2018-10-01 17:32 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.70 MB, application/zip)
2018-10-01 18:15 PDT, EWS Watchlist
no flags
Patch (8.74 KB, patch)
2018-10-02 09:25 PDT, Per Arne Vollan
no flags
Patch (8.73 KB, patch)
2018-10-02 09:28 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2018-10-01 15:14:03 PDT
Per Arne Vollan
Comment 2 2018-10-01 15:14:51 PDT
EWS Watchlist
Comment 3 2018-10-01 17:32:38 PDT
Comment on attachment 351312 [details] Patch Attachment 351312 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/9419303 New failing tests: media/track/track-cue-line-position.html
EWS Watchlist
Comment 4 2018-10-01 17:32:39 PDT
Created attachment 351326 [details] Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5 2018-10-01 18:15:50 PDT
Comment on attachment 351312 [details] Patch Attachment 351312 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/9419729 New failing tests: media/track/track-cue-line-position.html
EWS Watchlist
Comment 6 2018-10-01 18:15:51 PDT
Created attachment 351332 [details] Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
Eric Carlson
Comment 7 2018-10-02 01:54:17 PDT
Comment on attachment 351312 [details] Patch r=me once the bots are happy
Per Arne Vollan
Comment 8 2018-10-02 09:25:59 PDT
Per Arne Vollan
Comment 9 2018-10-02 09:28:40 PDT
Per Arne Vollan
Comment 10 2018-10-02 11:10:35 PDT
Comment on attachment 351398 [details] Patch Thanks for reviewing!
WebKit Commit Bot
Comment 11 2018-10-02 11:36:39 PDT
Comment on attachment 351398 [details] Patch Clearing flags on attachment: 351398 Committed r236754: <https://trac.webkit.org/changeset/236754>
Ahmad Saleem
Comment 12 2023-08-18 04:29:31 PDT
Note You need to log in before you can comment on or make changes to this bug.