[WebVTT] Cue with line setting is not rendered correctly https://bugs.webkit.org/show_bug.cgi?id=190168

Reviewed by Eric Carlson.

Source/WebCore:

When the line setting contains an optional alignment value, the cue is not rendered at the correct position,
see https://w3c.github.io/webvtt/#webvtt-line-cue-setting. This patch does not implement correct handling of
the line setting alignment values, it only makes sure parsing does not fail when the cue has line alignment
settings.

Test: media/track/track-cue-line-position.html

* html/track/VTTCue.cpp:
(WebCore::VTTCueBox::applyCSSProperties):
(WebCore::VTTCue::getPositionCoordinates const):
(WebCore::VTTCue::setCueSettings):

LayoutTests:

* media/track/captions-webvtt/line-position.vtt: Added.
* media/track/track-cue-line-position-expected-mismatch.html: Added.
* media/track/track-cue-line-position.html: Added.


Canonical link: https://commits.webkit.org/205164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236754 268f45cc-cd09-0410-ab3c-d52691b4dbfc